--- a/index.html
+++ b/index.html
@@ -3,21 +3,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="theme-color" content="#1e3a8a" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="theme-color" content="#dc2626" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>Wise MegaPromo</title>
+    <title>Wise Control | Management</title>
     <link rel="manifest" href="manifest.json" />
     <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/726/726548.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
+      :root {
+        --safe-area-inset-bottom: env(safe-area-inset-bottom);
+      }
       body {
         font-family: 'Inter', sans-serif;
         background-color: #f8fafc;
-        /* Prevent pull-to-refresh on mobile to feel more like an app */
-        overscroll-behavior-y: none;
+        overscroll-behavior-y: contain;
+        -webkit-tap-highlight-color: transparent;
+      }
+      html { -webkit-text-size-adjust: 100%; }
+      * { -webkit-overflow-scrolling: touch; }
+      @supports (padding-bottom: env(safe-area-inset-bottom)) {
+        .pb-safe { padding-bottom: env(safe-area-inset-bottom); }
       }
     </style>
     <script type="importmap">
