--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <meta name="theme-color" content="#dc2626" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>Wise Control | Management</title>
+    <title>Wise Control | Gestão Inteligente</title>
     <link rel="manifest" href="manifest.json" />
     <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/726/726548.png" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      // Polyfill para evitar que o app quebre se o process.env não estiver definido globalmente
+      window.process = window.process || { env: {} };
+    </script>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
       :root {
@@ -27,6 +31,10 @@
       @supports (padding-bottom: env(safe-area-inset-bottom)) {
         .pb-safe { padding-bottom: env(safe-area-inset-bottom); }
       }
+      .custom-scrollbar::-webkit-scrollbar { width: 6px; height: 6px; }
+      .custom-scrollbar::-webkit-scrollbar-track { background: transparent; }
+      .custom-scrollbar::-webkit-scrollbar-thumb { background: #e2e8f0; border-radius: 10px; }
+      .custom-scrollbar::-webkit-scrollbar-thumb:hover { background: #cbd5e1; }
     </style>
     <script type="importmap">
 {
@@ -43,5 +51,6 @@
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="index.tsx"></script>
   </body>
 </html>
